--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -5,6 +5,20 @@ svg
 
 ================================
 
+docs.google.com
+
+INVERT
+.docs-icon
+.docs-homescreen-icon
+.docs-homescreen-item-overflow-white-24
+.docs-homescreen-unfold-more-24
+svg
+.docs-instant-button-bubble-icon
+.kix-paginateddocumentplugin-compact-mode
+.kix-cursor
+
+================================
+
 facebook.com
 
 INLINE
@@ -39,3 +53,5 @@ youtube.com
 
 INVERT
 #checkmark
+.toggle-container.paper-toggle-button
+.deemphasize.yt-formatted-string
